--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=5.5.9",
+        "php": "7.2.0|7.3.5",
         "laravel/framework": "5.7.*",
         "laravelcollective/html": "^5.2.0",
         "guzzlehttp/guzzle": "^6.2",
